add snet146 imagenet pretrained model

--- a/cfgs/snet.yml
+++ b/cfgs/snet.yml
@@ -19,5 +19,5 @@ TEST:
   MAX_SIZE: 480
   RPN_POST_NMS_TOP_N: 1000
 POOLING_SIZE: 7
-POOLING_MODE: align
+POOLING_MODE: pool
 CROP_RESIZE_WITH_MAX_POOL: False
