add Multi-scale training  and Multi-scale training

--- a/cfgs/snet.yml
+++ b/cfgs/snet.yml
@@ -3,21 +3,23 @@ TRAIN:
   HAS_RPN: True
   BBOX_NORMALIZE_TARGETS_PRECOMPUTED: True
   RPN_POSITIVE_OVERLAP: 0.7
+  RPN_POST_NMS_TOP_N: 2000
   RPN_BATCHSIZE: 256
   PROPOSAL_METHOD: gt
   BG_THRESH_LO: 0.0
+  BG_THRESH_HI: 0.3
   DISPLAY: 20
   BATCH_SIZE: 128
   WEIGHT_DECAY: 0.0001
-  SCALES: [320]
   DOUBLE_BIAS: False
   SNAPSHOT_PREFIX: Snet
   LEARNING_RATE: 0.01
+  SIZE: [240,320,480]
 TEST:
   HAS_RPN: True
-  SCALES: [320]
-  MAX_SIZE: 480
-  RPN_POST_NMS_TOP_N: 1000
+  SIZE: 320
+  RPN_POST_NMS_TOP_N: 200
 POOLING_SIZE: 7
-POOLING_MODE: pool
+POOLING_MODE: align
 CROP_RESIZE_WITH_MAX_POOL: False
+FEAT_STRIDE: 16
